login for and signupform

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer('utilities'){
-    .jit{
-        margin:1px;
-    }
+    
+    :root{
+        background-color: none !important; 
+      }
 }
